<?xml version="1.0" encoding="utf-8"?>

<resources>
    <string name="app_name">SayItAlarm</string>
    <!-- Informational Text -->
    <string name="info_next_alarm_time">After %s hours and %s minutes,\n the alarm will go off.</string>
    <string name="info_timeout">The alarm will stop ringing after</string>
    <string name="info_snooze">Alarm will ring again after"</string>
    <string name="info_add_and_edit_initialize_error">Oops! Something went wrong. Please restart the application and try again.</string>
    <string name="info_settings_initialize_error">Oops! Something went wrong while loading the settings. Please restart the application and try again.</string>
    <string name="info_list_initialize_error">Oops! Something went wrong while loading the alarms. Please restart the application and try again.</string>
    <string name="info_list_no_alarm">Hey there! Just tap the + button to get started.</string>
    <string name="info_scripts">Please write down texts that uplift your spirits, improve your mental state, or something you want to achieve. One tip I\'d like to share is that it\'s proven affirming and focusing on these goals as if you have already achieved them can help you accomplish them more effectively.</string>
    <string name="info_scripts_only_letter">Please write the text using only letters. Text should be pronounceable.</string>
    <string name="info_permission_rationale">To use SayItAlarm, the following permissions are required:
        \n\n Essential:
        \n\t\u2022 RecordAudio(Mic): Recommend selecting \"Allow only while using the app\".
        \n\t\u2022 Notification
        \n\n Optional:
        \n\t\u2022 Music and Audio: You can choose audio files to use as alarm sounds.
    </string>

    <!-- Label -->
    <string name="alarms">Alarms</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="done">Done</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="repeat">Repeat</string>
    <string name="label">Label</string>
    <string name="ringtone">Ringtone</string>
    <string name="alert_type">Alert Type</string>
    <string name="permission">Permission</string>
    <string name="request_permission">Request permissions</string>
    <string name="settings">Settings</string>
    <string name="timeout">TimeOut</string>
    <string name="snooze">Snooze</string>
    <string name="theme">Theme</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="license">License</string>
    <string name="say_it">Say It</string>
    <!-- ContentDescription -->
    <string name="action_close">Close</string>
    <string name="action_add_alarm">Add alarm</string>
    <string name="action_add_script">Add say it script</string>
    <string name="action_delete_alarm">Delete alarm</string>
    <string name="action_delete_script">Delete script</string>
    <string name="action_edit">Edit item aligned</string>
    <string name="action_open_settings">Open settings</string>
    <string name="action_set_alarm_time">Set alarm time</string>
    <string name="action_navigate_back">Return to previous screen</string>
    <string name="action_check">Select or confirm this option</string>
    <string name="action_component_wheel_picker">Select a value using the wheel picker</string>
    <string name="action_info">Show information</string>
    <string name="action_collapse">Collapse section</string>
</resources>
